AFTER KNOWING SAFE STATE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(1 main.cpp Banker.h Steps.cpp Steps.h)
+add_executable(1 main.cpp Banker.h)
